Setup API gateway and initial backend services. client app next

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,7 +1,8 @@
 <html>
-    <head><title>Hello Clients</title></head>
+    <head>
+        <title>Greetings Fellow Scorers</title>
+    </head>
     <body>
-        <h1>This is the client app</h1>
         <div id="app"></div>
     </body>
     <script src="./index.js"></script>
